--- a/Readme
+++ b/Readme
@@ -1,6 +1,6 @@
 Sistema de gestión de mantenimiento y repuestos.
 
-
+DER.PNG
 
 User (Usuario):
 Esta tabla es proporcionada por el sistema de autenticación de Django y se utiliza para representar a los empleados o usuarios registrados en la aplicación. Algunos de los campos incluidos en el modelo User de Django son:
